          2020-07-22 -- tomso_open now handles URLs
          2020-07-20 -- added constants module and Teff property to FGONG and
                        and GYRE models
v0.0.11,  2020-02-04 -- added script to convert between stellar model types
          2019-10-16 -- added classes to FGONG, GYRE and ADIPLS modules as well
                        as tests that currently run alongside old functions
v0.0.10,  2019-08-01 -- added `prune` keyword to `mesa.load_history` to force a
                        strictly increasing model number by only taking last
                        model of any given model number
                     -- added function to convert AMDL back into FGONG
                     -- frequency tables in MESA samples now in stored in record
                        arrays using same keys as MESA
                     -- suppressed divide by zero and 0/0 warnings in ADIPLS
                        manipulation
                     -- refactored MESA/GYRE readers to use common code and
                        tweaked them to infer column widths from header names
                     -- added option to reverse arrays from fgong.fgong_get
                     -- added specific heat capacity `cp` to fgong.fgong_get
v0.0.9,   2018-09-24 -- should fix bugs in gzip support in v0.0.8 
v0.0.8,   2018-09-21 -- Some functions now automagically read gzipped files
                        ending `.gz.`.
                     -- `fgong_` and `amdl_get` now return single keys in the
                        same form as requested.
v0.0.7,   2018-05-30 -- Improvements to GYRE file manipulation.
v0.0.6,   2018-05-03 -- Renamed IO module to FGONG.
v0.0.5,   2018-03-02 -- Bugfix in integrate.  Also added test and improved
                        fgong/amdl_get.
v0.0.4,   2018-02-10 -- Multiple improvements: functionality, tests,
                        documentation...
v0.0.3,   2017-11-08 -- First PyPI version, documentation on ReadTheDocs.