@@ -1,5 +1,0 @@
-Common
-======
-.. automodule:: tomso.common
-   :members:
-
