@@ -1,7 +1,7 @@
 #!/usr/bin/env python3
 
 from argparse import ArgumentParser
-from tomso.common import DEFAULT_G
+from tomso.utils import DEFAULT_G
 
 parser = ArgumentParser(description="""
 `tomso-convert` converts stellar models between different formats that
