@@ -1,3 +1,5 @@
+          2020-07-29 -- rename `common` to `utils`
+          2020-07-26 -- where implemented, functions return objects by default
           2020-07-22 -- tomso_open now handles URLs
           2020-07-20 -- added constants module and Teff property to FGONG and
                         and GYRE models
